[package]
edition = { workspace = true }
license = { workspace = true }
name    = "nomos-tracing"
version = "0.1.0"

[package.metadata.cargo-machete]
# False positives.
ignored = [
  # Required by `opentelemetry_otlp::new_exporter().with_http_client()`.
  "opentelemetry-http",
]

[lints]
workspace = true

[dependencies]
opentelemetry                      = { default-features = false, version = "0.26" }
opentelemetry-http                 = { default-features = false, features = ["reqwest"], version = "0.26" }
opentelemetry-otlp                 = { default-features = false, features = ["grpc-tonic", "http-proto"], version = "0.26" }
opentelemetry-semantic-conventions = "0.26"
opentelemetry_sdk                  = { default-features = false, features = ["rt-tokio"], version = "0.26" }
rand                               = { workspace = true }
reqwest                            = { workspace = true }
serde                              = { default-features = false, version = "1.0" }
tokio                              = "1"
tracing                            = { workspace = true }
tracing-appender                   = "0.2"
tracing-gelf                       = "0.7"
tracing-loki                       = { default-features = false, features = ["compat-0-2-1"], version = "0.2.5" }
tracing-opentelemetry              = { default-features = false, features = ["metrics"], version = "0.27" }
tracing-subscriber                 = { default-features = false, features = ["env-filter", "std"], version = "0.3" }
url                                = { default-features = false, version = "2", features = ["serde"] }
