[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-utils"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
blake2     = { version = "0.10", optional = true }
const-hex  = "1"
humantime  = { version = "2.1", optional = true }
rand       = "0.9"
serde      = { version = "1.0", optional = true, features = ["derive"] }
serde_with = { workspace = true, optional = true }
time       = { version = "0.3", optional = true, features = ["serde-human-readable"] }

[features]
rng  = ["blake2"]
time = ["dep:humantime", "dep:serde_with", "dep:time", "serde"]

[dev-dependencies]
nistrs      = "0.1.2"
rand_chacha = "0.9"
serde_json  = "1.0"
