[package]
edition = "2021"
license = { workspace = true }
name    = "tests"
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
blst                     = { version = "0.3.11" }
chain-service            = { workspace = true }
common-http-client       = { workspace = true }
cryptarchia-engine       = { workspace = true, features = ["serde"] }
cryptarchia-sync         = { workspace = true }
executor-http-client     = { workspace = true }
futures                  = "0.3"
futures-util             = "0.3.31"
hex                      = "0.4.3"
kzgrs-backend            = { workspace = true }
nomos-api                = { workspace = true }
nomos-blend-message      = { workspace = true }
nomos-blend-scheduling   = { workspace = true }
nomos-blend-service      = { workspace = true, features = ["libp2p"] }
nomos-core               = { workspace = true }
nomos-da-dispersal       = { workspace = true }
nomos-da-network-core    = { workspace = true }
nomos-da-network-service = { workspace = true }
nomos-da-sampling        = { workspace = true }
nomos-da-verifier        = { workspace = true }
nomos-executor           = { workspace = true, default-features = false, features = ["testing", "tracing"] }
nomos-http-api-common    = { workspace = true }
nomos-ledger             = { workspace = true, features = ["serde"] }
nomos-libp2p             = { workspace = true }
nomos-membership         = { workspace = true }
nomos-mempool            = { workspace = true, features = ["libp2p", "mock"] }
nomos-network            = { workspace = true, features = ["libp2p"] }
nomos-node               = { workspace = true, default-features = false, features = ["testing"] }
nomos-time               = { workspace = true }
nomos-tracing            = { workspace = true }
nomos-tracing-service    = { workspace = true }
nomos-utils              = { workspace = true }
num-bigint               = "0.4"
rand                     = { workspace = true }
reqwest                  = { workspace = true, features = ["json"] }
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1.0"
serde_yaml               = "0.9"
subnetworks-assignations = { workspace = true }
tempfile                 = { workspace = true }
time                     = "0.3"
tokio                    = "1"
tracing                  = { workspace = true }

[[test]]
name = "test_cryptarchia_happy_path"
path = "src/tests/cryptarchia/happy.rs"

[[test]]
name = "test_cryptarchia_bootstrap"
path = "src/tests/cryptarchia/bootstrap.rs"

[[test]]
name = "test_orphan_handling"
path = "src/tests/cryptarchia/orphan.rs"

[[test]]
name = "test_da"
path = "src/tests/da/disperse.rs"

[[test]]
name = "test_da_api"
path = "src/tests/da/api.rs"

[[test]]
name = "test_mempool_api"
path = "src/tests/mempool/api.rs"

[[test]]
name = "test_membership_api"
path = "src/tests/membership/api.rs"

[[test]]
name = "test_membership_disperse"
path = "src/tests/membership/disperse.rs"
