[package]
edition = "2021"
license = { workspace = true }
name    = "tests"
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
blst                     = { version = "0.3.11" }
chain-service            = { workspace = true }
common-http-client       = { workspace = true }
cryptarchia-engine       = { features = ["serde"], workspace = true }
cryptarchia-sync         = { workspace = true }
ed25519-dalek            = { version = "3.0.0-pre.0", features = ["rand_core", "serde"] }
executor-http-client     = { workspace = true }
futures                  = { default-features = false, version = "0.3" }
futures-util             = { default-features = false, version = "0.3.31" }
hex                      = { default-features = false, version = "0.4.3" }
kzgrs-backend            = { workspace = true }
nomos-api                = { workspace = true }
nomos-blend-message      = { workspace = true }
nomos-blend-scheduling   = { workspace = true }
nomos-blend-service      = { features = ["libp2p"], workspace = true }
nomos-core               = { workspace = true }
nomos-da-dispersal       = { workspace = true }
nomos-da-network-core    = { workspace = true }
nomos-da-network-service = { workspace = true }
nomos-da-sampling        = { workspace = true }
nomos-da-verifier        = { workspace = true }
nomos-executor           = { default-features = false, features = ["testing", "tracing"], workspace = true }
nomos-http-api-common    = { workspace = true }
nomos-ledger             = { features = ["serde"], workspace = true }
nomos-libp2p             = { workspace = true }
nomos-membership         = { workspace = true }
nomos-mempool            = { features = ["libp2p", "mock"], workspace = true }
nomos-network            = { features = ["libp2p"], workspace = true }
nomos-node               = { default-features = false, features = ["testing"], workspace = true }
nomos-time               = { workspace = true }
nomos-tracing            = { workspace = true }
nomos-tracing-service    = { workspace = true }
nomos-utils              = { workspace = true }
num-bigint               = { version = "0.4", default-features = false }
rand                     = { workspace = true }
rand_core                = { version = "^0.9" }
reqwest                  = { workspace = true, features = ["json"] }
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1.0"
serde_yaml               = "0.9"
serial_test              = "3.1.1"
subnetworks-assignations = { workspace = true }
tempfile                 = { workspace = true }
time                     = { default-features = false, version = "0.3" }
tokio                    = "1"
tracing                  = { workspace = true }

[[test]]
name = "test_cryptarchia_happy_path"
path = "src/tests/cryptarchia/happy.rs"

[[test]]
name = "test_cryptarchia_bootstrap"
path = "src/tests/cryptarchia/bootstrap.rs"

[[test]]
name = "test_orphan_handling"
path = "src/tests/cryptarchia/orphan.rs"

[[test]]
name = "test_da"
path = "src/tests/da/disperse.rs"

[[test]]
name = "test_da_api"
path = "src/tests/da/api.rs"

[[test]]
name = "test_mempool_api"
path = "src/tests/mempool/api.rs"

[[test]]
name = "test_membership_api"
path = "src/tests/membership/api.rs"

[[test]]
name = "test_membership_disperse"
path = "src/tests/membership/disperse.rs"
