[package]
edition           = "2024"
license.workspace = true
name              = "utxotree"
version           = "0.1.0"

[dependencies]
digest    = "0.10"
rpds      = { version = "1", features = ["serde"] }
serde     = { version = "1.0", features = ["derive", "rc"], optional = true }
thiserror = "1.0"

[dev-dependencies]
blake2            = "0.10"
quickcheck        = "1.0"
quickcheck_macros = "1.0"

[lints]
workspace = true
