[package]
edition           = "2021"
license.workspace = true
name              = "cryptarchia-sync"
version           = "0.1.0"

[dependencies]
bytes         = { workspace = true }
futures       = "0.3"
libp2p        = { workspace = true, features = ["quic", "tokio", "yamux"] }
libp2p-stream = { workspace = true }
nomos-core    = { workspace = true }
rand          = "0.9"
serde         = { version = "1", features = ["derive"] }
thiserror     = "1"
tokio         = { version = "1", features = ["macros", "rt", "sync"] }
tracing       = "0.1"

[dev-dependencies]
libp2p-swarm-test = { version = "0.5", features = ["tokio"] }
