[package]
edition = { workspace = true }
license = { workspace = true }
name    = "cryptarchia-sync"
version = "0.1.0"

[dependencies]
bytes              = { workspace = true, features = ["serde"] }
cryptarchia-engine = { workspace = true }
futures            = { default-features = false, version = "0.3" }
libp2p             = { optional = true, workspace = true }
libp2p-stream      = { optional = true, workspace = true }
nomos-core         = { workspace = true }
rand               = { workspace = true }
serde              = { default-features = false, version = "1" }
serde_with         = { workspace = true }
thiserror          = "1"
tokio              = { default-features = false, version = "1" }
tracing            = { default-features = false, version = "0.1" }

[dev-dependencies]
libp2p            = { features = ["dns", "quic", "tokio"], workspace = true }
libp2p-swarm-test = { default-features = false, version = "0.5" }

[features]
default = []
libp2p  = ["dep:libp2p", "dep:libp2p-stream"]
