[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-ledger"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
cryptarchia-engine     = { workspace = true }
crypto-bigint          = "0.5"
nomos-core             = { workspace = true }
nomos-utils            = { workspace = true, optional = true, features = ["serde"] }
nomos_proof_statements = { workspace = true }
rand                   = "0.8.5"
serde                  = { version = "1.0", features = ["derive"], optional = true }
thiserror              = "1"
utxotree               = { workspace = true }

[features]
serde = ["cryptarchia-engine/serde", "dep:nomos-utils", "dep:serde", "utxotree/serde"]
