[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-ledger"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
cryptarchia-engine     = { workspace = true }
crypto-bigint          = "0.5"
ed25519                = "2.2.3"
groth16                = { workspace = true }
nomos-core             = { workspace = true }
nomos-utils            = { workspace = true, optional = true, features = ["serde"] }
nomos_proof_statements = { workspace = true }
num-bigint             = "0.4"
rand                   = { workspace = true }
rpds                   = "1.1.1"
serde                  = { version = "1.0", features = ["derive"], optional = true }
thiserror              = "1"
utxotree               = { workspace = true }

[dev-dependencies]
ed25519-dalek = "2.0.0"

[features]
serde = ["cryptarchia-engine/serde", "dep:nomos-utils", "dep:serde", "utxotree/serde"]
