[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-ledger"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
cryptarchia-engine = { workspace = true }
ed25519            = { default-features = false, version = "2.2.3" }
groth16            = { workspace = true }
mmr                = { features = ["serde"], workspace = true }
nomos-core         = { workspace = true }
nomos-utils        = { features = ["serde"], optional = true, workspace = true }
num-bigint         = { version = "0.4", default-features = false }
rand               = { workspace = true }
rpds               = { default-features = false, version = "1.1.1" }
serde              = { default-features = false, features = ["derive"], optional = true, version = "1.0" }
thiserror          = "1"
utxotree           = { workspace = true }

[dev-dependencies]
ed25519-dalek = { default-features = false, version = "2.0.0" }
rand          = { features = ["std", "std_rng"], workspace = true }

[features]
serde = ["cryptarchia-engine/serde", "dep:nomos-utils", "dep:serde", "groth16/deser", "utxotree/serde"]
