[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-http-api-common"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
governor       = { default-features = false, version = "0.6" }
serde          = { default-features = false, features = ["alloc", "derive"], version = "1.0" }
serde_with     = { workspace = true, features = ["macros"] }
tower_governor = { default-features = false, features = ["axum"], version = "0.3" }
