[package]
edition = { workspace = true }
license = { workspace = true }
name    = "nomos-http-api-common"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
governor       = { default-features = false, version = "0.6" }
nomos-core     = { workspace = true }
serde          = { default-features = false, features = ["alloc", "derive"], version = "1.0" }
serde_with     = { features = ["macros"], workspace = true }
tower_governor = { default-features = false, features = ["axum"], version = "0.3" }
