[package]
edition = { workspace = true }
license = { workspace = true }
name    = "nomos-http-api-common"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
axum = { default-features = false, features = ["http1", "http2", "json", "query", "tokio"], version = "0.7.5" }
governor = { default-features = false, version = "0.6" }
nomos-core = { workspace = true }
pprof = { default-features = false, version = "0.15", features = [
  "criterion",
  "flamegraph",
  "protobuf-codec",
], optional = true }
serde = { default-features = false, features = ["alloc", "derive"], version = "1.0" }
serde_with = { default-features = false, features = ["macros"], workspace = true }
tokio = { default-features = false, version = "1", features = ["time"], optional = true }
tower_governor = { default-features = false, features = ["axum"], version = "0.3" }
tracing = { default-features = false, workspace = true, optional = true }

[features]
profiling = ["pprof", "tokio", "tracing"]
