[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend"
version = "0.1.0"

[dependencies]
fixed               = { version = "1", features = ["serde-str"] }
futures             = "0.3"
multiaddr           = "0.18"
nomos-blend-message = { workspace = true }
nomos-utils         = { workspace = true, features = ["serde", "time"] }
rand                = "0.8"
serde               = { version = "1.0", features = ["derive"] }
serde_with          = { workspace = true }
tokio               = { version = "1", features = ["macros", "sync", "time"] }
tokio-stream        = "0.1"
tracing             = { workspace = true }

[dev-dependencies]
rand_chacha = "0.3"
tokio       = { version = "1", features = ["rt-multi-thread", "time"] }
