[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-network"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
cached                 = { workspace = true }
futures                = "0.3.30"
libp2p                 = { workspace = true }
nomos-blend-message    = { workspace = true }
nomos-blend-scheduling = { workspace = true }
nomos-utils            = { workspace = true, optional = true }
sha2                   = "0.10"
tokio                  = { version = "1", features = ["time"], optional = true }
tokio-stream           = { version = "0.1", optional = true }
tracing                = { workspace = true }

[dev-dependencies]
libp2p       = { workspace = true, features = ["ed25519", "quic", "tokio"] }
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1"

[features]
default = ["tokio"]
tokio   = ["dep:nomos-utils", "dep:tokio", "dep:tokio-stream"]
