[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-network"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
either                 = "1.15.0"
futures                = "0.3.30"
futures-timer          = { version = "3.0.3" }
libp2p                 = { workspace = true }
nomos-blend-message    = { workspace = true }
nomos-blend-scheduling = { workspace = true }
nomos-libp2p           = { workspace = true }
nomos-utils            = { workspace = true, optional = true }
tokio                  = { version = "1", features = ["time"], optional = true }
tokio-stream           = { version = "0.1", optional = true }
tracing                = { workspace = true }

[dev-dependencies]
async-trait         = { version = "0.1" }
libp2p              = { workspace = true, features = ["ed25519", "tokio"] }
libp2p-stream       = { workspace = true }
libp2p-swarm-test   = { version = "0.5.0", features = ["tokio"] }
nomos-blend-message = { workspace = true, features = ["unsafe-test-functions"] }
test-log            = { version = "0.2.18", features = ["trace"] }
tokio               = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream        = "0.1"

[features]
default = ["tokio"]
tokio   = ["dep:nomos-utils", "dep:tokio", "dep:tokio-stream"]
