[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-scheduling"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
derivative          = "2"
fork_stream         = { workspace = true }
futures             = "0.3"
hex                 = "0.4"
multiaddr           = "0.18"
nomos-blend-message = { workspace = true }
nomos-core          = { workspace = true }
rand                = { workspace = true }
serde               = { version = "1.0", features = ["derive"] }
tokio               = { version = "1", features = ["macros", "sync", "time"] }
tokio-stream        = { version = "0.1", features = ["sync"] }
tracing             = { workspace = true }

[dev-dependencies]
rand_chacha = "0.3"
tokio       = { version = "1", features = ["rt-multi-thread", "time"] }
