[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-scheduling"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
derivative          = "2"
fork_stream         = { workspace = true }
futures             = { default-features = false, version = "0.3" }
hex                 = { default-features = false, version = "0.4" }
multiaddr           = { default-features = false, version = "0.18" }
nomos-blend-message = { workspace = true }
nomos-core          = { workspace = true }
rand                = { features = ["alloc"], workspace = true }
serde               = { default-features = false, version = "1.0" }
tokio               = { default-features = false, version = "1" }
tokio-stream        = { default-features = false, version = "0.1" }
tracing             = { workspace = true }

[dev-dependencies]
nomos-utils = { workspace = true }
rand        = { features = ["getrandom"], workspace = true }
tokio       = { default-features = false, version = "1" }
