[package]
edition = { workspace = true }
license = { workspace = true }
name    = "nomos-blend-scheduling"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait         = { default-features = false, version = "0.1" }
derivative          = "2"
fork_stream         = { workspace = true }
futures             = { default-features = false, version = "0.3" }
hex                 = { default-features = false, version = "0.4" }
multiaddr           = { default-features = false, version = "0.18" }
nomos-blend-message = { workspace = true }
nomos-core          = { workspace = true }
rand                = { features = ["alloc"], workspace = true }
serde               = { default-features = false, version = "1.0" }
thiserror           = { default-features = false, version = "1" }
tokio               = { default-features = false, version = "1" }
tokio-stream        = { default-features = false, version = "0.1" }
tracing             = { workspace = true }

[dev-dependencies]
groth16             = { workspace = true }
libp2p              = { workspace = true }
nomos-blend-message = { workspace = true, features = ["unsafe-test-functions"] }
nomos-utils         = { workspace = true }
test-log            = { default-features = false, version = "0.2.18", features = ["trace"] }
tokio               = { default-features = false, version = "1" }

[features]
unsafe-test-functions = []
