[package]
authors = ["Daniel Sanchez Quiros <danielsq@status.im>"]
edition = "2021"
license = { workspace = true }
name    = "nomos-core"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow                 = "1.0"
async-trait            = { version = "0.1" }
bincode                = "1.3"
blake2                 = { version = "0.10" }
bytes                  = { workspace = true }
const-hex              = "1"
cryptarchia-engine     = { workspace = true, features = ["serde"] }
ed25519                = { version = "2.2", features = ["serde"] }
ed25519-dalek          = { version = "2.2.0", features = ["serde"] }
hex                    = { version = "0.4" }
multiaddr              = "0.18"
nomos_proof_statements = { workspace = true }
nomos_risc0_proofs     = { path = "../risc0_proofs" }
risc0-zkvm             = { workspace = true }
serde                  = { version = "1.0", features = ["derive"] }
thiserror              = "1.0"
tracing                = { workspace = true }

[dev-dependencies]
rand       = { workspace = true }
risc0-zkvm = { workspace = true }
serde_json = "1.0"

[features]
default = []
mock    = []
