[package]
edition = "2021"
license = "MIT or Apache-2.0"
name    = "nomos_proof_statements"
version = "0.1.0"

[dependencies]
cl            = { path = "../cl" }
crypto-bigint = { version = "0.5.5", features = ["serde"] }
serde         = { version = "1.0", features = ["derive"] }
sha2          = "0.10"
