[package]
edition = { workspace = true }
license = { workspace = true }
name    = "kzgrs-backend"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
ark-ff        = "0.4"
ark-poly      = "0.4.2"
ark-serialize = "0.4.2"
blake2        = { default-features = false, workspace = true }
itertools     = { default-features = false, version = "0.12" }
kzgrs         = { workspace = true }
nomos-core    = { workspace = true }
rand          = { default-features = false, features = ["std"], workspace = true }
rayon         = { optional = true, version = "1.10.0" }
serde         = { default-features = false, version = "1.0" }

[dev-dependencies]
ark-bls12-381 = { default-features = false, version = "0.4.0" }
divan         = { default-features = false, version = "0.1" }

[features]
default   = []
parallel  = ["dep:rayon", "kzgrs/parallel"]
single    = []
testutils = []

[[bench]]
harness = false
name    = "encoder"

[[bench]]
harness = false
name    = "verifier"

[[bench]]
harness = false
name    = "reconstruct"
